crates/apollo-compiler/test_data/diagnostics/0040_operation_with_undefined_fields_on_reference_type.txt
Error: cannot query field `size` on type `Query`
   ╭─[0040_operation_with_undefined_fields_on_reference_type.graphql:2:3]
   │
 2 │       size
   │       ──┬─  
   │         ╰─── `size` field is not defined
   │ 
 6 │ ╭─▶ type Query {
   ┆ ┆   
 9 │ ├─▶ }
   │ │       
   │ ╰─────── `Query` declared here
   │     
   │     Help: `size` is not defined on `Query` type
───╯
Error: cannot query field `weight` on type `Query`
   ╭─[0040_operation_with_undefined_fields_on_reference_type.graphql:3:3]
   │
 3 │       weight
   │       ───┬──  
   │          ╰──── `weight` field is not defined
   │ 
 6 │ ╭─▶ type Query {
   ┆ ┆   
 9 │ ├─▶ }
   │ │       
   │ ╰─────── `Query` declared here
   │     
   │     Help: `weight` is not defined on `Query` type
───╯

